--- a/WebApplication21/appsettings.Development.json
+++ b/WebApplication21/appsettings.Development.json
@@ -1,8 +1,13 @@
 {
+  "ConnectionStrings": {
+    "WebConnectionString": "Data Source=DESKTOP-N9DMAOH\\SQLEXPRESS;Initial Catalog=Web21DB;Integrated Security=True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   }
 }
